Relie le site à Google Plus

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ description: >-
 url: "http://www.mnavocat.fr"
 twitter_username: SMNAvocat
 linkedin_username: sophiemoutotnoce
+google_plus_profile_url: "https://plus.google.com/u/2/108738942293580871499"
 map_api_key: "AIzaSyBg5ePLEbSyQqLxLgelQqUTdRmxy4BsIHA"
 address:
   about: dans le 1er arrondissement de Paris
