--- a/_config.yml
+++ b/_config.yml
@@ -24,17 +24,17 @@ home_slider:
   unsplash_id: ySQF5oENkrw
   texts:
   - Skieurs et Snowboarders
-  - Faites valoir vos droits à l'indemnisation en cas d'accident
+  - Faites valoir vos droits à indemnisation en cas d'accident
 - slide: Accidents de la circulation
   unsplash_id: nHAGNt2rFz8
   texts:
   - Vous avez été renversé sur la voie publique
-  - Contactez le cabinet pour vous assister dans vos démarches
+  - Avez ou sans tiers identifié, nous pouvons vous aider à être indemnisé
 - slide: Accidents de vélo
   unsplash_id: RMlGmGSdFpY
   texts:
   - Vous avez eu un accident à vélo
-  - Avez ou sans tiers identifié, nous pouvons vous aider à être indemnisé
+  - Contactez le cabinet pour vous assister dans vos démarches
 
 google_analytics_id: "UA-115311940-1"
 
