--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,9 @@ address:
   locality: Paris
   maps_url: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.487830861083!2d2.323341051400032!3d48.867976179186755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e32f5269295%3A0xc37ade41c0ad0dfb!2sCabinet+de+Ma%C3%AEtre+Sylvie+Vernassiere!5e0!3m2!1sfr!2sfr!4v1520009895226
 
+owner: "Maître Sophie Moutot Noce"
+webmaster: "Aurélien Noce"
+
 home_slider:
 - slide: Accidents de ski
   unsplash_id: ySQF5oENkrw
@@ -61,6 +64,10 @@ competencies:
 - title: "Accidents médicaux"
   texts:
   - "Le Cabinet vous assistera dans vos démarches que vous soyez victime d'un accident médical ayant pour cause la faute d'un médecin, une infection nosocomiale ou encore un aléa thérapeutique."
+
+business:
+  siren: "530 821 255"
+  ape: "6910Z"
 
 # Build settings
 markdown: kramdown
