--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ competencies:
 - title: "Aggressions et attentats"
   texts:
   - "Victimes de violences volontaires ou involontaires (à caractère sexuel ou non) occasionnant des séquelles physiques et/ou psychologiques définitives."
-  - "Le Cabinet vous aidera à obtenir l indemnisation de vos préjudices par la Solidarité Nationale."
+  - "Le Cabinet vous aidera à obtenir l'indemnisation de vos préjudices par la Solidarité Nationale."
 - title: "Accidents scolaires"
   texts:
   - "Votre enfant a eu un accident commis involontairement par un autre enfant en cours de récréation. Il peut obtenir l’indemnisation de ses préjudices et vous pouvez réclamer le remboursement des frais que vous avez engagés auprès de l’assurance habitation responsabilité civile des parents de cet autre enfant."
